<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.sinc.enhanced"
            android:targetClass="com.sinc.enhanced.MainActivity"
            android:data="sinc://search" />
    </shortcut>
    <shortcut
        android:shortcutId="queue"
        android:enabled="true"
        android:icon="@drawable/ic_queue"
        android:shortcutShortLabel="@string/shortcut_queue"
        android:shortcutLongLabel="@string/shortcut_queue_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.sinc.enhanced"
            android:targetClass="com.sinc.enhanced.MainActivity"
            android:data="sinc://queue" />
    </shortcut>
    <shortcut
        android:shortcutId="library"
        android:enabled="true"
        android:icon="@drawable/ic_library"
        android:shortcutShortLabel="@string/shortcut_library"
        android:shortcutLongLabel="@string/shortcut_library_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.sinc.enhanced"
            android:targetClass="com.sinc.enhanced.MainActivity"
            android:data="sinc://library" />
    </shortcut>
</shortcuts>
